test: fix dockerfile casing

--- a/test/dart/Dockerfile
+++ b/test/dart/Dockerfile
@@ -2,7 +2,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN touch /.dummy
 
@@ -26,14 +26,14 @@ WORKDIR /test
 #--------------------------------------
 # build
 #--------------------------------------
-FROM base as build
+FROM base AS build
 
 RUN prepare-tool dart
 
 #--------------------------------------
 # test: dart 2.x (non-root)
 #--------------------------------------
-FROM build as testa
+FROM build AS testa
 
 USER 1000
 
@@ -51,7 +51,7 @@ RUN set -ex; \
 #--------------------------------------
 # test: dart 2.x (root, openstack)
 #--------------------------------------
-FROM base as testb
+FROM base AS testb
 
 # renovate: datasource=docker
 RUN install-tool dart 2.19.6
