--- a/test/golang/Dockerfile
+++ b/test/golang/Dockerfile
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN touch /.dummy
 
@@ -29,7 +29,7 @@ WORKDIR /test
 #--------------------------------------
 # test: golang
 #--------------------------------------
-FROM base as testa
+FROM base AS testa
 
 # renovate: datasource=docker versioning=docker
 RUN install-tool golang 1.22.5
@@ -55,7 +55,7 @@ RUN set -ex; cd c; go get -d ./...; cat go.sum
 #--------------------------------------
 # test: check first patch version eg v1.11.0
 #--------------------------------------
-FROM base as testb
+FROM base AS testb
 
 # do not update patch version
 RUN install-tool golang 1.11.0
@@ -73,7 +73,7 @@ RUN go env
 #--------------------------------------
 # test: golang (non-root)
 #--------------------------------------
-FROM base as testc
+FROM base AS testc
 
 RUN prepare-tool golang
 
