--- a/test/nix/Dockerfile
+++ b/test/nix/Dockerfile
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN touch /.dummy
 
@@ -26,7 +26,7 @@ WORKDIR /test
 #--------------------------------------
 # test: nix 2.10
 #--------------------------------------
-FROM base as testa
+FROM base AS testa
 
 # old nix version, not for renovating
 RUN install-tool nix 2.10.0
@@ -53,7 +53,7 @@ RUN set -ex; \
 #--------------------------------------
 # test: nix latest
 #--------------------------------------
-FROM base as testb
+FROM base AS testb
 
 
 USER 1000
