--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:jammy as base
+FROM ubuntu:jammy AS base
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
@@ -20,7 +20,7 @@ RUN install-tool git v2.45.2
 #--------------------------------------
 # Image: build
 #--------------------------------------
-FROM base as build
+FROM base AS build
 
 RUN uname -p | tee | grep x86_64
 
@@ -31,7 +31,7 @@ RUN prepare-tool all
 #--------------------------------------
 # Image: test
 #--------------------------------------
-FROM build as test
+FROM build AS test
 
 # renovate: datasource=github-releases packageName=bazelbuild/bazelisk
 RUN install-tool bazelisk v1.20.0
@@ -96,7 +96,7 @@ RUN install-tool vendir v0.40.2
 #--------------------------------------
 # Image: test-erlang
 #--------------------------------------
-FROM build as test-erlang
+FROM build AS test-erlang
 
 # renovate: datasource=github-releases packageName=containerbase/erlang-prebuild versioning=docker
 RUN install-tool erlang 26.2.5.0
@@ -106,7 +106,7 @@ RUN install-tool elixir 1.16.3
 #--------------------------------------
 # Image: test-java
 #--------------------------------------
-FROM build as test-java
+FROM build AS test-java
 
 # renovate: datasource=java-version packageName=java-jre
 RUN install-tool java 21.0.3+9.0.LTS
@@ -116,7 +116,7 @@ RUN install-tool gradle 8.8
 #--------------------------------------
 # Image: test-node
 #--------------------------------------
-FROM build as test-node
+FROM build AS test-node
 
 # renovate: datasource=node
 RUN install-tool node v20.15.0
@@ -128,7 +128,7 @@ RUN install-tool yarn 4.3.1
 #--------------------------------------
 # Image: test-php
 #--------------------------------------
-FROM build as test-php
+FROM build AS test-php
 
 # renovate: datasource=github-releases packageName=containerbase/php-prebuild
 RUN install-tool php 8.3.8
@@ -138,7 +138,7 @@ RUN install-tool composer 2.7.7
 #--------------------------------------
 # Image: test-python
 #--------------------------------------
-FROM build as test-python
+FROM build AS test-python
 
 # renovate: datasource=github-releases packageName=containerbase/python-prebuild
 RUN install-tool python 3.12.4
@@ -156,7 +156,7 @@ RUN install-tool poetry 1.8.3
 #--------------------------------------
 # Image: test-ruby
 #--------------------------------------
-FROM build as test-ruby
+FROM build AS test-ruby
 
 # renovate: datasource=github-releases packageName=containerbase/ruby-prebuild versioning=ruby
 RUN install-tool ruby 3.3.3
