--- a/test/golang/Dockerfile.arm64
+++ b/test/golang/Dockerfile.arm64
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -27,7 +27,7 @@ RUN install-tool git v2.45.2
 #--------------------------------------
 # Image: golang
 #--------------------------------------
-FROM base as test-golang
+FROM base AS test-golang
 
 # renovate: datasource=docker versioning=docker
 RUN install-tool golang 1.22.5
