--- a/test/latest/Dockerfile.arm64
+++ b/test/latest/Dockerfile.arm64
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -23,7 +23,7 @@ RUN install-containerbase
 #--------------------------------------
 # Image: bazelisk
 #--------------------------------------
-FROM base as test-bazelisk
+FROM base AS test-bazelisk
 
 # renovate: datasource=github-releases packageName=bazelbuild/bazelisk
 RUN install-tool bazelisk v1.20.0
@@ -31,7 +31,7 @@ RUN install-tool bazelisk v1.20.0
 #--------------------------------------
 # Image: bun
 #--------------------------------------
-FROM base as test-bun
+FROM base AS test-bun
 
 # renovate: datasource=npm
 RUN install-tool bun 1.1.17
@@ -39,7 +39,7 @@ RUN install-tool bun 1.1.17
 #--------------------------------------
 # Image: gleam
 #--------------------------------------
-FROM base as test-gleam
+FROM base AS test-gleam
 
 # renovate: datasource=github-releases packageName=gleam-lang/gleam
 RUN install-tool gleam 1.2.1
@@ -47,7 +47,7 @@ RUN install-tool gleam 1.2.1
 #--------------------------------------
 # Image: docker
 #--------------------------------------
-FROM base as test-docker
+FROM base AS test-docker
 
 # renovate: datasource=github-releases packageName=moby/moby
 RUN install-tool docker v27.0.3
@@ -55,7 +55,7 @@ RUN install-tool docker v27.0.3
 #--------------------------------------
 # Image: git
 #--------------------------------------
-FROM base as test-git
+FROM base AS test-git
 
 # renovate: datasource=github-tags packageName=git/git
 RUN install-tool git v2.45.2
@@ -63,7 +63,7 @@ RUN install-tool git v2.45.2
 #--------------------------------------
 # Image: git-lfs
 #--------------------------------------
-FROM test-git as test-git-lfs
+FROM test-git AS test-git-lfs
 
 # renovate: datasource=github-releases packageName=git-lfs/git-lfs
 RUN install-tool git-lfs v3.5.1
@@ -71,7 +71,7 @@ RUN install-tool git-lfs v3.5.1
 #--------------------------------------
 # Image: helmfile
 #--------------------------------------
-FROM base as test-helmfile
+FROM base AS test-helmfile
 
 # renovate: datasource=github-releases packageName=helmfile/helmfile
 RUN install-tool helmfile v0.166.0
@@ -79,7 +79,7 @@ RUN install-tool helmfile v0.166.0
 #--------------------------------------
 # Image: kustomize
 #--------------------------------------
-FROM base as test-kustomize
+FROM base AS test-kustomize
 
 # renovate: datasource=github-releases packageName=kubernetes-sigs/kustomize
 RUN install-tool kustomize 5.4.2
@@ -87,7 +87,7 @@ RUN install-tool kustomize 5.4.2
 #--------------------------------------
 # Image: terraform
 #--------------------------------------
-FROM base as test-terraform
+FROM base AS test-terraform
 
 # renovate: datasource=docker packageName=hashicorp/terraform versioning=docker
 RUN install-tool terraform 1.9.0
@@ -95,7 +95,7 @@ RUN install-tool terraform 1.9.0
 #--------------------------------------
 # Image: vendir
 #--------------------------------------
-FROM base as test-vendir
+FROM base AS test-vendir
 
 # renovate: datasource=github-releases packageName=vmware-tanzu/carvel-vendir
 RUN install-tool vendir v0.40.2
