--- a/test/nix/Dockerfile.arm64
+++ b/test/nix/Dockerfile.arm64
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -23,7 +23,7 @@ RUN install-containerbase
 #--------------------------------------
 # Image: nix
 #--------------------------------------
-FROM base as test-nix
+FROM base AS test-nix
 
 # renovate: datasource=github-tags packageName=NixOS/nix
 RUN install-tool nix 2.23.1
