--- a/test/ruby/Dockerfile.arm64
+++ b/test/ruby/Dockerfile.arm64
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -23,7 +23,7 @@ RUN install-containerbase
 #--------------------------------------
 # Image: ruby
 #--------------------------------------
-FROM base as test-ruby
+FROM base AS test-ruby
 
 # renovate: datasource=github-releases packageName=containerbase/ruby-prebuild versioning=ruby
 RUN install-tool ruby 3.3.3
@@ -31,7 +31,7 @@ RUN install-tool ruby 3.3.3
 #--------------------------------------
 # Image: bundler
 #--------------------------------------
-FROM test-ruby as test-bundler
+FROM test-ruby AS test-bundler
 
 # renovate: datasource=rubygems versioning=ruby
 RUN install-tool bundler 2.5.14
@@ -39,7 +39,7 @@ RUN install-tool bundler 2.5.14
 #--------------------------------------
 # Image: cocoapods
 #--------------------------------------
-FROM test-ruby as test-cocoapods
+FROM test-ruby AS test-cocoapods
 
 # cocoapods need git, but don't install yet
 # renovate: datasource=github-tags packageName=git/git
