--- a/test/rust/Dockerfile
+++ b/test/rust/Dockerfile
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN touch /.dummy
 
@@ -27,7 +27,7 @@ RUN prepare-tool rust
 #--------------------------------------
 # build
 #--------------------------------------
-FROM base as build
+FROM base AS build
 
 # renovate: datasource=docker versioning=docker
 RUN install-tool rust 1.79.0
@@ -41,7 +41,7 @@ USER 1000
 #--------------------------------------
 # test a: root
 #--------------------------------------
-FROM build as testa
+FROM build AS testa
 
 RUN set -ex; \
     cd a; \
@@ -55,7 +55,7 @@ RUN cargo --version
 #--------------------------------------
 # test b: non-root
 #--------------------------------------
-FROM base as testb
+FROM base AS testb
 
 USER 1000
 
