--- a/test/swift/Dockerfile.arm64
+++ b/test/swift/Dockerfile.arm64
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal as base
+FROM ubuntu:focal AS base
 
 RUN uname -p | tee | grep aarch64
 RUN touch /.dummy
@@ -26,7 +26,7 @@ RUN install-containerbase
 #--------------------------------------
 # Image: swift
 #--------------------------------------
-FROM base as test-swift
+FROM base AS test-swift
 
 # renovate: datasource=docker versioning=docker
 RUN install-tool swift 5.10.1
