build: use `ghcr.io/containerbase/ubuntu` mirror

--- a/test/dart/Dockerfile
+++ b/test/dart/Dockerfile
@@ -2,7 +2,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:focal AS base
+FROM ghcr.io/containerbase/ubuntu:20.04 AS base
 
 RUN touch /.dummy
 
