--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:jammy AS base
+FROM ghcr.io/containerbase/ubuntu:22.04 AS base
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
