--- a/test/Dockerfile.noble
+++ b/test/Dockerfile.noble
@@ -1,7 +1,7 @@
 #--------------------------------------
 # Image: base
 #--------------------------------------
-FROM ubuntu:noble AS base
+FROM ghcr.io/containerbase/ubuntu:24.04 AS base
 
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
