feat: add sops tool

--- a/test/latest/Dockerfile
+++ b/test/latest/Dockerfile
@@ -208,6 +208,9 @@ RUN install-tool gleam 1.3.2
 # renovate: datasource=github-releases packageName=containerbase/skopeo-prebuild
 RUN install-tool skopeo 1.16.0
 
+# renovate: datasource=github-releases packageName=getsops/sops
+RUN install-tool sops v3.8.1
+
 # renovate: datasource=github-releases packageName=vmware-tanzu/carvel-vendir
 ARG VENDIR_VERSION=0.32.2
 
