--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -81,6 +81,9 @@ RUN install-tool powershell v7.4.4
 # renovate: datasource=docker versioning=docker
 RUN install-tool rust 1.80.0
 
+# renovate: datasource=github-releases packageName=getsops/sops
+RUN install-tool sops v3.8.1
+
 # renovate: datasource=docker versioning=docker
 RUN install-tool swift 5.10.1
 
