--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "execa": "8.0.1",
     "global-agent": "3.0.0",
     "got": "14.4.2",
+    "ini": "4.1.3",
     "inversify": "6.0.2",
     "pino": "9.3.2",
     "pino-pretty": "11.2.2",
@@ -62,6 +63,7 @@
     "@tsconfig/strictest": "2.0.5",
     "@types/common-tags": "1.8.4",
     "@types/global-agent": "2.1.3",
+    "@types/ini": "4.1.1",
     "@types/node": "20.14.12",
     "@types/semver": "7.5.8",
     "@types/shelljs": "0.8.15",
