chore(renovate): disable eslint v9

--- a/renovate.json
+++ b/renovate.json
@@ -162,6 +162,11 @@
       "matchPackageNames": ["checkov", "renovate"],
       "extends": ["schedule:weekly"],
       "automerge": true
+    },
+    {
+      "description": "Disable eslint v9",
+      "matchDepNames": ["eslint"],
+      "allowedVersions": "<9"
     }
   ],
   "customManagers": [
