feat(cli): convert skopeo

--- a/test/latest/Dockerfile.arm64
+++ b/test/latest/Dockerfile.arm64
@@ -108,6 +108,9 @@ FROM base AS test-others
 # renovate: datasource=github-releases packageName=kubernetes/kubernetes
 RUN install-tool kubectl v1.30.3
 
+# renovate: datasource=github-releases packageName=containerbase/skopeo-prebuild
+RUN install-tool skopeo 1.16.0
+
 # renovate: datasource=github-releases packageName=getsops/sops
 RUN install-tool sops v3.9.0
 
