--- a/test/Dockerfile.noble
+++ b/test/Dockerfile.noble
@@ -84,6 +84,9 @@ RUN install-tool powershell v7.4.4
 # renovate: datasource=docker versioning=docker
 RUN install-tool rust 1.80.0
 
+# renovate: datasource=github-releases packageName=containerbase/skopeo-prebuild
+RUN install-tool skopeo 1.16.0
+
 # renovate: datasource=github-releases packageName=getsops/sops
 RUN install-tool sops v3.9.0
 
