test: better debug options

--- a/test/dart/Dockerfile
+++ b/test/dart/Dockerfile
@@ -9,6 +9,7 @@ RUN touch /.dummy
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
 
 ENV BASH_ENV=/usr/local/etc/env
 SHELL ["/bin/bash" , "-c"]
