--- a/test/latest/Dockerfile
+++ b/test/latest/Dockerfile
@@ -8,6 +8,7 @@ RUN touch /.dummy
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
 
 ENV BASH_ENV=/usr/local/etc/env
 SHELL ["/bin/bash" , "-c"]
@@ -117,6 +118,7 @@ ARG PRIMARY_GROUP_ID=${USER_ID}
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
 
 # Set env and shell
 ENV BASH_ENV=/usr/local/etc/env PATH=/home/$USER_NAME/bin:$PATH
