--- a/test/Dockerfile.jammy
+++ b/test/Dockerfile.jammy
@@ -6,6 +6,7 @@ FROM ghcr.io/containerbase/ubuntu:22.04 AS base
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_DEBUG
 ARG CONTAINERBASE_CDN
+ARG CONTAINERBASE_LOG_LEVEL
 
 ARG TARGETARCH
 
