--- a/test/nix/Dockerfile
+++ b/test/nix/Dockerfile
@@ -8,6 +8,7 @@ RUN touch /.dummy
 ARG APT_HTTP_PROXY
 ARG CONTAINERBASE_CDN
 ARG CONTAINERBASE_DEBUG
+ARG CONTAINERBASE_LOG_LEVEL
 ARG GITHUB_TOKEN
 
 ENV BASH_ENV=/usr/local/etc/env
