fix(cli/npm): support tools with slashes

--- a/test/node/Dockerfile
+++ b/test/node/Dockerfile
@@ -478,6 +478,12 @@ RUN set -ex; \
   node -e "new require('re2')('.*').exec('test'); console.log('re2 usable')"; \
   true
 
+
+RUN set -ex; \
+  install-npm @microsoft/rush; \
+  rush -h; \
+  true
+
 #--------------------------------------
 # final
 #--------------------------------------
