--- a/test/java/Dockerfile
+++ b/test/java/Dockerfile
@@ -92,7 +92,7 @@ RUN gradle --version
 #--------------------------------------
 FROM base AS test-gradle-b
 
-# renovate: datasource=adoptium-java packageName=java-jre
+# renovate: datasource=java-version packageName=java-jre
 RUN install-tool java-jre 21.0.4+7.0.LTS
 
 # renovate: datasource=gradle-version versioning=gradle
